--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.1.2",
     "@tanstack/react-query": "^5.45.1",
+    "axios": "^1.7.2",
     "jotai": "^2.8.2",
     "preact": "^10.22.0",
+    "react-promise-suspense": "^0.3.4",
     "viem": "2.x",
     "wagmi": "^2.10.2"
   },
@@ -27,6 +29,7 @@
     "@vitejs/plugin-react": "^4.3.0",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
+    "envalid": "^8.0.0",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
