--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jotai": "^2.8.2",
     "preact": "^10.22.0",
     "react-promise-suspense": "^0.3.4",
+    "socket.io-client": "^4.7.5",
     "viem": "2.x",
     "wagmi": "^2.10.2"
   },
