--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-promise-suspense": "^0.3.4",
     "socket.io-client": "^4.7.5",
     "viem": "2.x",
-    "wagmi": "^2.10.2"
+    "wagmi": "^2.10.2",
+    "wouter-preact": "^3.2.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.2",
