--- a/package.json
+++ b/package.json
@@ -14,39 +14,39 @@
     "@rainbow-me/rainbowkit": "^2.1.2",
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
-    "jotai": "^2.8.2",
+    "jotai": "^2.8.3",
     "preact": "^10.22.0",
     "react-promise-suspense": "^0.3.4",
     "socket.io-client": "^4.7.5",
-    "viem": "2.x",
-    "wagmi": "^2.10.2",
-    "wouter-preact": "^3.2.0"
+    "viem": "^2.16.0",
+    "wagmi": "^2.10.4",
+    "wouter-preact": "^3.2.1"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.2",
     "@tailwindcss/typography": "^0.5.13",
-    "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
-    "@vitejs/plugin-react": "^4.3.0",
+    "@types/node": "^20.14.7",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "envalid": "^8.0.0",
-    "eslint": "^9.3.0",
+    "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-relative-import-paths": "^1.5.4",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "rollup-plugin-visualizer": "^5.12.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.12",
+    "typescript": "^5.5.2",
+    "vite": "^5.3.1",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "packageManager": "yarn@4.2.2"
