--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "yarn build && yarn vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "@rainbow-me/rainbowkit": "^2.1.2",
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
