--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rainbow-me/rainbowkit": "^2.1.2",
     "@tanstack/react-query": "^5.48.0",
     "axios": "^1.7.2",
+    "flowbite-react": "^0.10.1",
     "jotai": "^2.8.3",
     "preact": "^10.22.0",
     "react-promise-suspense": "^0.3.4",
