--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
+    "@privy-io/react-auth": "^1.73.0",
     "@rainbow-me/rainbowkit": "^2.1.2",
     "@tanstack/react-query": "^5.48.0",
     "axios": "^1.7.2",
@@ -49,6 +50,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2",
     "vite": "^5.3.1",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "packageManager": "yarn@4.2.2"
