--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
     "@privy-io/react-auth": "^1.73.0",
+    "@privy-io/wagmi": "^0.2.10",
     "@tanstack/react-query": "^5.48.0",
     "axios": "^1.7.2",
     "flowbite-react": "^0.10.1",
