--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,5 @@ VITE_BACKEND_URL=http://localhost:1337
 VITE_PRIVY_APP_ID=123123123123asdf
 VITE_TOKEN_ADDRESS=0x4229c271c19CA5F319fb67b4BC8A40761A6d6299
 VITE_TOKEN_RECEIVER_CONTRACT=0x...
+VITE_DEV_CLIENT_ID=client id from privy for dev
+VITE_PROD_CLIENT_ID=client id from privy for prod
