--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "cross-env NODE_ENV=production tsc && vite build",
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src",
+    "lint-fix": "yarn eslint ./src/ --fix",
     "preview": "yarn build && yarn vite preview"
   },
   "dependencies": {
@@ -27,6 +28,9 @@
     "wouter-preact": "^3.2.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.6.0",
     "@preact/preset-vite": "^2.8.2",
     "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20.14.7",
@@ -37,13 +41,13 @@
     "cross-env": "^7.0.3",
     "envalid": "^8.0.0",
     "eslint": "^9.5.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-relative-import-paths": "^1.5.4",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "globals": "^15.7.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "rollup-plugin-visualizer": "^5.12.0",
