--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cross-env": "^7.0.3",
     "envalid": "^8.0.0",
     "eslint": "^9.5.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-relative-import-paths": "^1.5.4",
     "eslint-plugin-prettier": "^5.1.3",
