max-w-16 on desktop too

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ VITE_TOKEN_ADDRESS=0x4229c271c19CA5F319fb67b4BC8A40761A6d6299
 VITE_TOKEN_RECEIVER_CONTRACT=0x...
 VITE_DEV_CLIENT_ID=client id from privy for dev
 VITE_PROD_CLIENT_ID=client id from privy for prod
+VITE_MAX_PLAYERS=50 # Should be synced with backend
