Better morning streak

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jotai": "^2.8.3",
     "preact": "^10.22.0",
     "react-promise-suspense": "^0.3.4",
+    "react-timer-hook": "^3.0.7",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
     "viem": "^2.16.0",
