--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@privy-io/react-auth": "^1.73.0",
     "@privy-io/wagmi": "^0.2.10",
     "@tanstack/react-query": "^5.48.0",
+    "@uniswap/sdk-core": "^5.3.1",
+    "@uniswap/smart-order-router": "^3.35.12",
+    "@uniswap/v3-periphery": "^1.4.4",
+    "@uniswap/v3-sdk": "^3.13.1",
     "axios": "^1.7.2",
     "flowbite-react": "^0.10.1",
     "jotai": "^2.8.3",
