--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -3,21 +3,25 @@ description: Action that installs dependencies, builds and lints the code
 branding:
   icon: 'check'
   color: 'green'
-runs:
-  using: 'composite'
-  steps:
-    - uses: actions/checkout@v3
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'yarn'
-    - name: Install modules
-      run: yarn
-      shell: bash
-    - name: Build code
-      run: yarn build
-      shell: bash
-    - name: Lint code
-      run: yarn lint
-      shell: bash
+on:
+  pull_request:
+    types: [synchronize, opened]
+jobs:
+  build-and-lint-code:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'yarn'
+      - name: Install modules
+        run: yarn
+        shell: bash
+      - name: Build code
+        run: yarn build
+        shell: bash
+      - name: Lint code
+        run: yarn lint
+        shell: bash
