--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "type": "module",
+  "homepage": "https://neged-hat.app/#",
   "scripts": {
     "start": "NODE_ENV=development vite",
     "build": "cross-env NODE_ENV=production tsc && vite build",
