--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^10.0.5",
     "serve": "^14.2.3",
     "socket.io-client": "^4.7.5",
+    "use-long-press": "^3.2.0",
     "viem": "^2.16.0",
     "wagmi": "^2.10.4",
     "wouter-preact": "^3.2.1"
