--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=development vite",
     "build": "cross-env NODE_ENV=production tsc && vite build",
     "pretty": "prettier --check src",
-    "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src",
+    "lint": "yarn pretty && eslint --max-warnings 0 ./src/",
     "lint-fix": "yarn eslint ./src/ --fix",
     "preview": "yarn build && yarn vite preview",
     "prod": "serve -p 57 -s dist"
@@ -54,6 +54,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "globals": "^15.7.0",
     "postcss": "^8.4.38",
