--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -1,4 +1,8 @@
 name: Build and lint code
+description: Action that installs dependencies, builds and lints the code
+branding:
+  icon: 'check'
+  color: 'green'
 on:
   pull_request:
     types: [synchronize, opened]
@@ -6,4 +10,15 @@ jobs:
   build-and-lint-code:
     runs-on: ubuntu-latest
     steps:
-      - uses: Borodutch/build-and-lint-code@v1.0.4
+      - uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+          cache: 'yarn'
+      - name: Install modules
+        run: yarn
+      - name: Build code
+        run: yarn build
+      - name: Lint code
+        run: yarn lint
