--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prod": "serve -p 57 -s dist"
   },
   "dependencies": {
+    "@farcaster/frame-sdk": "^0.0.5",
     "@formkit/auto-animate": "^0.8.2",
     "@privy-io/react-auth": "^1.79.1",
     "@privy-io/wagmi": "^0.2.10",
